[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/card_buttons.gd" type="Script" id=1]

[node name="card_buttons" type="Node2D"]
script = ExtResource( 1 )

[node name="button" type="TextureButton" parent="."]
margin_right = 27.0
margin_bottom = 33.0
rect_scale = Vector2( 5, 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="button" to="." method="_on_button_pressed"]
